Remove unnecessary 'h' after Estimation

--- a/app/templates/form.html
+++ b/app/templates/form.html
@@ -22,7 +22,7 @@
                 {% endfor %}
             </select><br><br>
 
-            <label for="estimation">Estimation (h)</label><br>
+            <label for="estimation">Estimation</label><br>
             <select name="estimation" id="estimation">
                 {% for i in range(1, 81) %}
                     <option value="{{ i/2 }}h">{{ i/2  }}h</option>
