Add pen and bin icon to list.html

--- a/app/templates/list.html
+++ b/app/templates/list.html
@@ -17,9 +17,17 @@
                             <td>{{ field }}</td>
                         {% endif %}
                     {% endfor %}
+                    {% if i != 0 %}
+                        <td>
+                            <a href="#"><img src="../static/pen.png" width="20" height="20" alt="Pen icon"></a> 
+                        </td>
+                        <td>
+                            <a href="#"><img src="../static/bin.jpg" width="20" height="20" alt="Bin icon"></a>
+                        </td>
+                    {% endif %}
                 </tr>
             {% endfor %}
         </table>
-       
+        
     </body>
 </html>
