--- a/app/templates/list.html
+++ b/app/templates/list.html
@@ -19,10 +19,10 @@
                     {% endfor %}
                     {% if i != 0 %}
                         <td>
-                            <a href="#"><img src="../static/pen.png" width="20" height="20" alt="Pen icon"></a> 
+                            <a href="/story/{{ line[0] }}"><img src="../static/pen.png" width="20" height="20" alt="Pen icon"></a> 
                         </td>
                         <td>
-                            <a href="#"><img src="../static/bin.jpg" width="20" height="20" alt="Bin icon"></a>
+                            <a href="/story/{{ line[0] }}"><img src="../static/bin.jpg" width="20" height="20" alt="Bin icon"></a>
                         </td>
                     {% endif %}
                 </tr>
