--- a/app/templates/form.html
+++ b/app/templates/form.html
@@ -46,7 +46,7 @@
             <label for="status">Status</label><br>
             <select name="status" id="status">
                 {% for status in status_list %}
-                    {% if i == data[6] %}
+                    {% if status == data[6] %}
                         <option selected value="{{ status }}">{{ status  }}</option>
                     {% else %}
                         <option value="{{ status }}">{{ status  }}</option>
