Add delete_story() to views and refactor to make it work

--- a/app/templates/list.html
+++ b/app/templates/list.html
@@ -22,7 +22,7 @@
                             <a href="/story/{{ line[0] }}"><img src="../static/pen.png" width="20" height="20" alt="Pen icon"></a> 
                         </td>
                         <td>
-                            <a href="/story/{{ line[0] }}"><img src="../static/bin.jpg" width="20" height="20" alt="Bin icon"></a>
+                            <a href="/story/{{ line[0] }}/delete"><img src="../static/bin.jpg" width="20" height="20" alt="Bin icon"></a>
                         </td>
                     {% endif %}
                 </tr>
