Delete unnecessary class of the add_new_story button

--- a/app/templates/list.html
+++ b/app/templates/list.html
@@ -5,7 +5,7 @@
     </head>
     <body>
         <h2>User Story Manager</h2>
-        <button type="button" class="btn" id="add_new_story" onclick="window.location.href='/story'">Add New User Story</button>
+        <button type="button" id="add_new_story" onclick="window.location.href='/story'">Add New User Story</button>
         <p></p>
         <table border="1">
             <tr>
